[package]
name = "mozkit"
version = "0.2.0"
edition = "2021"
rust-version = "1.65"
authors = ["Mozk Taberenai <mozk@me.com>"]
license = "MIT"
description = ""
repository = "https://github.com/MozkTaberenai/mozkit"
homepage = "https://github.com/MozkTaberenai/mozkit"
keywords = ["web", "wasm", "WebAssembly"]
categories = ["wasm", "web-programming"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
wasm-bindgen-futures = "0.4.38"
futures-lite = "2.0.0"
pin-project-lite = "0.2.10"
log = "0.4.20"
wasm-logger = "0.2.0"
slab = "0.4.9"

[dependencies.web-sys]
version = "0.3.65"
features = [
  "Window",
  "Document",
  "Location",
  "History",
  "Navigator",
  "Storage",
  "EventTarget",
  "Node",
  "NodeList",
  "HtmlCollection",
  "DocumentFragment",
  "Text",
  "Element",
  "DomTokenList",
  "HtmlElement",
  "HtmlHeadElement",
  "SvgElement",
  "Response",
  "AddEventListenerOptions",
  "Event",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[workspace]
members = [
  # "examples/*",
  "xtask",
]
resolver = "2"
